--- a/src/main/resources/templates/scientists/sci__main_requests.html
+++ b/src/main/resources/templates/scientists/sci__main_requests.html
@@ -8,20 +8,21 @@
     <title>MNU</title>
 </head>
 <body>
+<div th:if="${status}" th:text="${status}" class="flash flash_success"></div>
 <div class="scientists-grid">
     <div class="employee-header">
         <div class="employee-info"> Name Surname <br> Level x</div>
     </div>
-    <a th:href="@{/sci/main}" id="experiments-button" class="scientists-grid__experiments grid-button button">
+    <div class="scientists-grid__experiments grid-button button">
         Experiments
-    </a>
-    <div class="scientists-grid__articles grid-button button button_pressed">
-        Articles
     </div>
-    <a th:href="@{/sci/main/requests}" class="scientists-grid__requests grid-button button">
+    <a th:href="@{/sci/main/articles}" class="scientists-grid__articles grid-button button">
+        Articles
+    </a>
+    <a th:href="@{/sci/main/requests}" class="scientists-grid__requests grid-button button button_pressed">
         Requests
     </a>
-    <a th:href="@{/sci/article}" class="scientists-grid__add grid-button button">
+    <a th:href="@{/sci/experiment}" class="scientists-grid__add grid-button button">
         Add Experiment
     </a>
 
