--- a/src/main/resources/templates/administrators/admin__articles.html
+++ b/src/main/resources/templates/administrators/admin__articles.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <div class="grid">
-    <div class="employee-header flex-row">
+    <div class="employee-header flex-row-left">
         <a th:href="@{/admin/main}">
             <img alt="back" th:src="@{/images/back.png}" class="icon button back-button button_round">
         </a>
