--- a/src/main/resources/templates/scientists/sci__main_articles.html
+++ b/src/main/resources/templates/scientists/sci__main_articles.html
@@ -22,7 +22,7 @@
         Requests
     </a>
     <a th:href="@{/sci/article}" class="scientists-grid__add grid-button button">
-        Add Experiment
+        Write article
     </a>
 
     <div class="content">
