--- a/src/main/resources/static/css/administrators/admin__experiments-articles.css
+++ b/src/main/resources/static/css/administrators/admin__experiments-articles.css
@@ -82,10 +82,19 @@ body {
     height: 50px;
 }
 
-.flex-row {
+.flex-row-left {
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
+}
+
+.flex-row {
+    display: flex;
+    justify-content: center;
+}
+
+.flex-row * {
+    margin: 0 15px;
 }
 
 .back-button {
@@ -123,29 +132,30 @@ body {
 }
 
 .content__main {
+    word-break: break-word;
     text-align: left;
     padding: 12px;
 }
 
 .waiting {
-    background: #83e7ff;
+    background: #dcefff;
 }
 
 .running {
-    background: #80ff85;
+    background: #d6f5d5;
 }
 
 .finished {
-    background: #b5b5b5;
+    background: #ececec;
 }
 
 .rejected {
-    background: #d76d8059;
+    background: #f2d6de;
 }
 
 .content-icon {
-    width: 20px;
-    height: 20px;
+    width: 25px;
+    height: 25px;
 }
 
 .hidden {
