--- a/src/main/resources/templates/administrators/admin__experiments.html
+++ b/src/main/resources/templates/administrators/admin__experiments.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <div class="grid">
-    <div class="employee-header flex-row">
+    <div class="employee-header flex-row-left">
         <a th:href="@{/admin/main}">
             <img alt="back" th:src="@{/images/back.png}" class="icon button back-button button_round">
         </a>
@@ -23,8 +23,29 @@
     </a>
 
     <div class="content">
-
+        <div th:each="exp: ${experiments}" class=" content__item">
+            <div class="content__header waiting">
+                <span class="header-text">
+                    <span> Major Exp. #</span><span th:text="${exp.id}"></span> <b><span th:text="${exp.title}"></span></b>
+                </span>
+            </div>
+            <div class="content__main">
+                <div th:if="${exp.assistant}">
+                    <b>Assistant</b>
+                    <div th:text="${exp.assistant.employee.name}"></div>
+                </div>
+                <b>Submitted on </b>
+                <div th:text="${exp.statusDate}"></div>
+                <b>Description</b>
+                <div th:text="${exp.description}"></div>
+                <div class="flex-row">
+                    <a th:attr="data-exp-id=${exp.id}" data-action="accept" class="button running">Accept</a>
+                    <a th:attr="data-exp-id=${exp.id}" data-action="reject" class="button rejected">Reject</a>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
+<script rel="script" type="text/javascript" th:src="@{/js/administrators/admin__experiments.js}"></script>
 </body>
 </html>
