--- a/src/main/resources/templates/administrators/admin__articles.html
+++ b/src/main/resources/templates/administrators/admin__articles.html
@@ -11,7 +11,7 @@
 <div class="grid">
     <div class="employee-header flex-row-left">
         <a th:href="@{/admin/main}">
-            <img alt="back" th:src="@{/images/back.png}" class="icon button back-button button_round">
+            <img alt="back" th:src="@{/images/back.png}" class="icon button button_back button_round">
         </a>
         <div class="employee-info"> Name Surname <br> Level x</div>
     </div>
