--- a/src/main/resources/templates/administrators/admin__employees.html
+++ b/src/main/resources/templates/administrators/admin__employees.html
@@ -10,9 +10,9 @@
 </head>
 <body>
 <div class="admin-employees-grid">
-    <div class="flex-row admin-header">
+    <div class="flex-row-left admin-header">
         <a th:href="@{/admin/main}">
-            <img alt="back" th:src="@{/images/back.png}" class="icon button back-button button_round">
+            <img alt="back" th:src="@{/images/back.png}" class="icon button button_back button_round">
         </a>
         <div class="employee-info"> Name Surname <br> Level: x</div>
     </div>
