--- a/src/main/resources/templates/administrators/admin__prawn-registration.html
+++ b/src/main/resources/templates/administrators/admin__prawn-registration.html
@@ -8,24 +8,24 @@
     <title>MNU</title>
 </head>
 <body>
-    <div class="flex-row admin-header">
+    <div class="flex-row-left admin-header">
         <a th:href="@{/admin/main}">
-            <img alt="back" th:src="@{/images/back.png}" class="icon button back-button button_round">
+            <img alt="back" th:src="@{/images/back.png}" class="icon button button_back button_round">
         </a>
         <div class="employee-info"> Name Surname <br> Level: x</div>
     </div>
     <form action="#" th:action="@{/admin/registerPrawn}" th:object="${form}" method="post" class="flex-column registration-box">
         <label class="form-item">
             <b>Name</b>
-            <input th:required="true" th:field="*{name}" class="input_big" placeholder="Name">
+            <input th:required="true" th:field="*{name}" class="input_big">
         </label>
         <label class="form-item">
             <b>Login</b>
-            <input th:required="true" th:field="*{username}" class="input_big" placeholder="Login">
+            <input th:required="true" th:field="*{username}" class="input_big">
         </label>
         <label class="form-item">
             <b>Password</b>
-            <input th:required="true" th:field="*{password}" type="password" class="input_big" placeholder="Password">
+            <input th:required="true" th:field="*{password}" type="password" class="input_big">
         </label>
         <input type="submit" class="registration-item button" value="Register">
     </form>
