--- a/src/main/resources/templates/scientists/sci__new-experiment.html
+++ b/src/main/resources/templates/scientists/sci__new-experiment.html
@@ -10,9 +10,9 @@
 <body>
 <div th:if="${error}" th:text="${error}" class="flash flash_error"></div>
 <div class="grid">
-    <div class="flex-row header">
+    <div class="flex-row-left header">
         <a th:href="@{/sci/main}">
-            <img alt="back" th:src="@{/images/back.png}" class="icon button back-button button_round">
+            <img alt="back" th:src="@{/images/back.png}" class="icon button button_back button_round">
         </a>
         <div class="info"> Name Surname <br> Level: x</div>
     </div>
