--- a/src/main/resources/static/css/administrators/admin__experiments-articles.css
+++ b/src/main/resources/static/css/administrators/admin__experiments-articles.css
@@ -1,8 +1,4 @@
-
-body {
-    font-family: "Helvetica", sans-serif;
-    font-size: 17px;
-}
+@import url("../common.css");
 
 .employee-header {
     grid-area: header;
@@ -29,11 +25,6 @@ body {
     margin-left: 20px;
 }
 
-.input_big {
-    font-size: 16px;
-    height: 25px;
-}
-
 .grid-button {
     margin: auto;
     text-align: center;
@@ -41,72 +32,8 @@ body {
     width: 220px;
 }
 
-.button {
-    color: black;
-    text-decoration: none;
-    border: 2px solid black;
-    border-radius: 6px;
-    padding: 8px 22px;
-    font-size: 20px;
-    position: relative;
-    cursor: pointer;
-    box-shadow: 0 5px #cacaca;
-    background: white;
-}
-
-.button:hover:not(.button_pressed) {
-    top: 2px;
-    box-shadow: 0 3px #cacaca;
-}
-
-.button:active:not(.button_pressed) {
-    top: 5px;
-    box-shadow: none;
-}
-
-.button_pressed {
-    top: 3px;
-    box-shadow: none;
-    outline: none;
-    background: lightgreen;
-    cursor: default;
-}
-
-.button_round {
-    padding: 9px;
-    border-radius: 100px;
-}
-
-.icon {
-    width: 50px;
-    height: 50px;
-}
-
-.flex-row-left {
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
-}
-
-.flex-row {
-    display: flex;
-    justify-content: center;
-}
-
 .flex-row * {
     margin: 0 15px;
-}
-
-.back-button {
-    margin-top: -5px;
-    margin-right: 15px;
-}
-
-.flex-column {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
 }
 
 .content {
@@ -137,29 +64,9 @@ body {
     padding: 12px;
 }
 
-.waiting {
-    background: #dcefff;
-}
-
-.running {
-    background: #d6f5d5;
-}
-
-.finished {
-    background: #ececec;
-}
-
-.rejected {
-    background: #f2d6de;
-}
-
 .content-icon {
     width: 25px;
     height: 25px;
-}
-
-.hidden {
-    display: none;
 }
 
 @media (max-width: 1200px) {
