--- a/src/main/resources/static/css/auth.css
+++ b/src/main/resources/static/css/auth.css
@@ -1,3 +1,5 @@
+@import url("common.css");
+
 body {
     font-family: "Helvetica", sans-serif;
     font-size: 17px;
@@ -53,44 +55,6 @@ body {
     display: block;
     font-size: 16px;
     height: 25px;
-}
-
-.button {
-    color: black;
-    text-decoration: none;
-    border: 2px solid black;
-    border-radius: 6px;
-    padding: 8px 22px;
-    font-size: 20px;
-    position: relative;
-    cursor: pointer;
-    box-shadow: 0 5px #cacaca;
-    background: white;
-}
-
-.button:hover:not(.button_pressed) {
-    top: 2px;
-    box-shadow: 0 3px #cacaca;
-}
-
-.button:active:not(.button_pressed) {
-    top: 5px;
-    box-shadow: none;
-}
-
-.button_pressed {
-    top: 3px;
-    box-shadow: none;
-    outline: none;
-    background: lightgreen;
-    cursor: default;
-}
-
-.flex-column {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
 }
 
 .hidden {
