--- a/src/main/resources/static/css/managers/manager__menu.css
+++ b/src/main/resources/static/css/managers/manager__menu.css
@@ -1,7 +1,4 @@
-body {
-    font-family: "Helvetica", sans-serif;
-    font-size: 17px;
-}
+@import url("../common.css");
 
 .managers-grid {
     display: grid;
@@ -42,58 +39,11 @@ body {
     width: 55px;
 }
 
-.input_big {
-    font-size: 16px;
-    height: 25px;
-}
-
-.button {
-    color: black;
-    text-decoration: none;
-    border: 2px solid black;
-    border-radius: 6px;
-    padding: 8px 22px;
-    font-size: 20px;
-    position: relative;
-    cursor: pointer;
-    box-shadow: 0 5px #cacaca;
-    background: white;
-}
-
-.button:hover:not(.button_pressed) {
-    top: 2px;
-    box-shadow: 0 3px #cacaca;
-}
-
-.button:active:not(.button_pressed) {
-    top: 5px;
-    box-shadow: none;
-}
-
-.button_pressed {
-    top: 3px;
-    box-shadow: none;
-    outline: none;
-    background: lightgreen;
-    cursor: default;
-}
-
-.flex-column {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
-
 .icon-row {
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: center;
-}
-
-.hidden {
-    display: none;
 }
 
 @media (max-width: 400px) {
