--- a/src/main/resources/static/css/scientists/sci__new-article.css
+++ b/src/main/resources/static/css/scientists/sci__new-article.css
@@ -1,7 +1,4 @@
-body {
-    font-family: "Helvetica", sans-serif;
-    font-size: 17px;
-}
+@import url("../common.css");
 
 .text-area_big {
     min-height: 400px;
@@ -11,16 +8,6 @@ body {
     margin: auto 0 auto 0;
 }
 
-.flex-row {
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
-}
-
-.form-item {
-    margin-top: 20px;
-}
-
 .input_big {
     display: block;
     font-size: 16px;
@@ -28,61 +15,9 @@ body {
     width: 500px;
 }
 
-.button {
-    color: black;
-    text-decoration: none;
-    border: 2px solid black;
-    border-radius: 6px;
-    padding: 8px 22px;
-    font-size: 20px;
-    position: relative;
-    cursor: pointer;
-    box-shadow: 0 5px #cacaca;
-    background: white;
-}
-
-.button:hover:not(.button_pressed) {
-    top: 2px;
-    box-shadow: 0 3px #cacaca;
-}
-
-.button:active:not(.button_pressed) {
-    top: 5px;
-    box-shadow: none;
-}
-
-.button_pressed {
-    top: 3px;
-    box-shadow: none;
-    outline: none;
-    background: lightgreen;
-    cursor: default;
-}
-
-.flex-column {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
-
-.button_round {
-    padding: 9px;
-    border-radius: 100px;
-}
-
-.icon {
-    width: 50px;
-    height: 50px;
-}
-
-.back-button {
+.button_back {
     margin-top: 10px;
     margin-right: 15px;
-}
-
-.hidden {
-    display: none;
 }
 
 @media (max-width: 700px) {
