--- a/src/main/resources/static/css/scientists/sci__new-experiment.css
+++ b/src/main/resources/static/css/scientists/sci__new-experiment.css
@@ -1,7 +1,4 @@
-body {
-    font-family: "Helvetica", sans-serif;
-    font-size: 17px;
-}
+@import url("../common.css");
 
 .header {
     grid-area: header;
@@ -16,10 +13,6 @@ body {
 .grid__inputs {
     grid-area: inputs;
     margin-top: 10px;
-}
-
-.form-item {
-    margin-top: 20px;
 }
 
 .text-area_big {
@@ -45,12 +38,6 @@ body {
     margin: auto 0 auto 0;
 }
 
-.flex-row {
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
-}
-
 .input_big {
     display: block;
     font-size: 16px;
@@ -66,75 +53,13 @@ body {
     background: #d6ffc5;
 }
 
-.button {
-    color: black;
-    text-decoration: none;
-    border: 2px solid black;
-    border-radius: 6px;
-    padding: 8px 22px;
-    font-size: 20px;
-    position: relative;
-    cursor: pointer;
-    box-shadow: 0 5px #cacaca;
-    background: white;
-}
-
-.button:hover:not(.button_pressed) {
-    top: 2px;
-    box-shadow: 0 3px #cacaca;
-}
-
-.button:active:not(.button_pressed) {
-    top: 5px;
-    box-shadow: none;
-}
-
-.button_pressed {
-    top: 3px;
-    box-shadow: none;
-    outline: none;
-    background: lightgreen;
-    cursor: default;
-}
-
-.flex-column {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
-
-.button_round {
-    padding: 9px;
-    border-radius: 100px;
-}
-
 .grid__assistants-button {
     display: none;
 }
 
-.icon {
-    width: 50px;
-    height: 50px;
-}
-
-.back-button {
+.button_back {
     margin-top: 10px;
     margin-right: 15px;
-}
-
-.flash {
-    padding: 15px;
-    text-align: center;
-    font-weight: bold;
-}
-
-.flash_error {
-    background: #f2d6de;
-}
-
-.hidden {
-    display: none;
 }
 
 @media (max-width: 750px) {
