--- a/src/main/resources/templates/scientists/sci__new-article.html
+++ b/src/main/resources/templates/scientists/sci__new-article.html
@@ -8,9 +8,9 @@
     <title>MNU</title>
 </head>
 <body>
-<div class="flex-row">
+<div class="flex-row-left">
     <a th:href="@{/sci/main}">
-        <img alt="back" th:src="@{/images/back.png}" class="icon button back-button button_round">
+        <img alt="back" th:src="@{/images/back.png}" class="icon button button_back button_round">
     </a>
     <div class="info"> Name Surname <br> Level: x</div>
 </div>
