cool adaptive menu for scientists

--- a/src/main/resources/static/css/administrators/admin__menu.css
+++ b/src/main/resources/static/css/administrators/admin__menu.css
@@ -68,7 +68,7 @@
     }
 
     .grid-button {
-        width: auto;
+        width: 75vw;
         height: 40px;
         margin: auto auto 15px auto;
     }
