--- a/src/main/resources/static/css/scientists/sci__main.css
+++ b/src/main/resources/static/css/scientists/sci__main.css
@@ -1,55 +1,31 @@
 @import url("../common.css");
 
+body {
+    margin: 0;
+}
+
 .fixed-header {
+    padding: 12px 12px 20px 12px;
     position: fixed;
-    grid-area: header;
     top: 0;
     width: 100%;
-}
-
-.employee-header {
-    grid-area: w;
-}
-
-.scientists-grid {
-    display: grid;
-    grid: "header" 60px "content";
-    padding: 5px;
+    background: white;
+    border-bottom: 2px solid black;
 }
 
 .employee-info {
-    margin: auto 0 auto 0;
+    text-align: center;
 }
 
 .grid-button {
     margin: auto;
     text-align: center;
-    font-size: 24px;
-    width: 220px;
-}
-
-.scientists-grid__experiments {
-    grid-area: expButton;
-    margin-right: 20px;
-}
-
-.scientists-grid__articles {
-    grid-area: artButton;
-    margin-left: 20px;
-}
-
-.scientists-grid__requests {
-    grid-area: reqButton;
-    margin-left: 20px;
-}
-
-.scientists-grid__add {
-    grid-area: addButton;
+    width: 15vw;
 }
 
 .content {
-    grid-area: content;
     text-align: center;
+    margin-top: 75px;
 }
 
 .content__item {
@@ -80,49 +56,67 @@
     height: 25px;
 }
 
-@media (max-width: 1200px) {
-    .grid-button {
-        width: 180px;
-        font-size: 22px;
-    }
+.mobile-title {
+    margin-left: 30px;
+    font-size: 20px;
+}
 
-    .scientists-grid__experiments {
-        margin-right: 5px;
-    }
+.burger {
+    cursor: pointer;
+}
 
-    .scientists-grid__articles {
-        margin-left: 5px;
-    }
-
-    .scientists-grid__add {
-        width: 120px;
-    }
+#header_mobile {
+    display: none;
 }
 
 @media (max-width: 1000px) {
-    .scientists-grid {
-        grid: "header header" 50px "expButton artButton reqButton" 80px "addButton addButton addButton" 50px "content content content";
+    .grid-button {
+        font-size: 18px;
+        width: 12vw;
+        padding: 10px 15px;
     }
 
-    .scientists-grid__add {
-        width: auto;
+    .experiments-button {
+        width: 14vw;
+    }
+
+    .add-button {
+        width: 18.3vw;
+    }
+
+    .content__item {
+        width: 80%
     }
 }
 
-@media (max-width: 400px) {
-    .scientists-grid {
-        grid: "header" 75px "expButton" 65px "artButton" 65px "reqButton" 65px "addButton" 65px "content";
+@media (max-width: 700px) {
+    #header_mobile {
+        display: flex;
     }
 
-    .grid-button {
-        margin: auto;
+    .flex-row-left {
+        align-items: center;
     }
 
-    .scientists-grid__add {
-        margin-top: 10px;
+    #mobile-menu {
+        display: none;
+    }
+
+    .flex-row {
+        flex-direction: column;
+    }
+
+    .content__item {
+        width: 92%
     }
 
     .employee-info {
-        margin-top: 0;
+        margin-top: 12px;
+    }
+
+    .grid-button {
+        width: 80vw;
+        margin-top: 25px;
+        font-size: 22px;
     }
 }
