--- a/src/main/resources/templates/scientists/sci__main_requests.html
+++ b/src/main/resources/templates/scientists/sci__main_requests.html
@@ -18,10 +18,10 @@
         <a th:href="@{/sci/main}" class="experiments-button grid-button button">
             Experiments
         </a>
-        <a th:href="@{/sci/main/articles}" class="articles-button grid-button button">
+        <a th:href="@{/sci/main/articles}" class="grid-button button">
             Articles
         </a>
-        <div class="requests-button grid-button button button_pressed">
+        <div class="grid-button button button_pressed">
             Requests
         </div>
         <a th:href="@{/sci/experiment}" class="add-button grid-button button">
