--- a/src/main/resources/templates/scientists/sci__main_articles.html
+++ b/src/main/resources/templates/scientists/sci__main_articles.html
@@ -8,7 +8,6 @@
     <title>MNU</title>
 </head>
 <body>
-<div th:if="${status}" th:text="${status}" class="flash flash_success"></div>
 <div id="header" class="fixed-header">
     <div id="header_mobile" class="flex-row-left">
         <img th:src="@{/images/burger.png}" id="burger" class="burger icon">
@@ -19,10 +18,10 @@
         <a th:href="@{/sci/main}" id="experiments-button" class="experiments-button grid-button button">
             Experiments
         </a>
-        <div class="articles-button grid-button button button_pressed">
+        <div class="grid-button button button_pressed">
             Articles
         </div>
-        <a th:href="@{/sci/main/requests}" class="requests-button grid-button button">
+        <a th:href="@{/sci/main/requests}" class="grid-button button">
             Requests
         </a>
         <a th:href="@{/sci/article}" class="add-button grid-button button">
@@ -33,6 +32,7 @@
 
 
 <div class="content">
+    <div th:if="${status}" th:text="${status}" class="flash flash_success"></div>
 
 </div>
 <script rel="script" type="text/javascript" th:src="@{/js/scientists/sci__main.js}"></script>
