sci requests and fullname + level everywhere

--- a/src/main/resources/static/css/scientists/sci__main.css
+++ b/src/main/resources/static/css/scientists/sci__main.css
@@ -45,6 +45,10 @@ body {
     line-height: 22px;
 }
 
+.button_row {
+    margin: 0 15px;
+}
+
 .content__main {
     word-break: break-word;
     text-align: left;
