--- a/src/main/resources/templates/administrators/admin__district.html
+++ b/src/main/resources/templates/administrators/admin__district.html
@@ -13,7 +13,10 @@
         <a th:href="@{/admin/main}">
             <img alt="back" th:src="@{/images/back.png}" class="icon button_back button_round">
         </a>
-        <div class="employee-info"> Name Surname <br> Level: x</div>
+        <div class="employee-info">
+            <div th:text="${fullname}"></div>
+            <div th:text="${'Level ' + level}"></div>
+        </div>
     </div>
     <div>
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100">
