--- a/src/main/resources/templates/managers/manager__menu.html
+++ b/src/main/resources/templates/managers/manager__menu.html
@@ -10,7 +10,10 @@
 <body>
 <div class="managers-grid">
     <div class="managers-grid__header">
-        <div class="employee-info"> Name Surname <br> Level: x</div>
+        <div class="employee-info">
+            <div th:text="${fullname}"></div>
+            <div th:text="${'Level ' + level}"></div>
+        </div>
         <img alt="Clients list" class="clientsListButton" th:src="@{/images/human_list_icon.png}">
         <img alt="Prawns list" class="prawnsListButton" th:src="@{/images/alien_list_icon.png}">
     </div>
