--- a/src/main/resources/templates/scientists/sci__main_articles.html
+++ b/src/main/resources/templates/scientists/sci__main_articles.html
@@ -14,7 +14,10 @@
         <div class="mobile-title">Articles</div>
     </div>
     <div id="mobile-menu" class="flex-row">
-        <div class="employee-info"> Name Surname <br> Level x</div>
+        <div class="employee-info">
+            <div th:text="${fullname}"></div>
+            <div th:text="${'Level ' + level}"></div>
+        </div>
         <a th:href="@{/sci/main}" id="experiments-button" class="experiments-button grid-button button">
             Experiments
         </a>
