--- a/src/main/resources/templates/scientists/sci__new-experiment.html
+++ b/src/main/resources/templates/scientists/sci__new-experiment.html
@@ -14,7 +14,10 @@
         <a th:href="@{/sci/main}">
             <img alt="back" th:src="@{/images/back.png}" class="icon button button_back button_round">
         </a>
-        <div class="info"> Name Surname <br> Level: x</div>
+        <div class="info">
+            <div th:text="${fullname}"></div>
+            <div th:text="${'Level ' + level}"></div>
+        </div>
     </div>
     <form action="#" th:action="@{/sci/experiment}" th:object="${form}" method="post" class="grid__inputs flex-column">
         <label class="form-item">
